# pragma-axum-diesel-template

./: .clippy.toml  .env.example  Cargo.toml  Dockerfile  README.md  compose.dev.yaml
.github/workflows/: pragma.yaml  release.yaml
crates/pragma-api/: Cargo.toml
crates/pragma-api/src/: docs.rs  errors.rs  lib.rs  router.rs
crates/pragma-db/: Cargo.toml
crates/pragma-db/src/: errors.rs  lib.rs
src/: config.rs
